--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <header>
 
         <!--logo name-->
-        <a href="#" class="logo"><span>octors<span>c</span>ares.</a>
+        <a href="#" class="logo"><span>Doctors<span>c</span>ares.</a>
         <!--navbar link-->
         <nav class="navbar">
             <ul>
@@ -402,7 +402,7 @@
 
         </div>
 
-        <h1 class="credit">created by<span>Website. Masters</span>all right reserved.</h1>
+        <h1 class="credit">created by<span>Kunti Pal</span>all right reserved.</h1>
 
     </section>
 
