--- a/index.html
+++ b/index.html
@@ -3,30 +3,22 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1,0">
-    <title>Complete Responsive Hospitl Website Design tutorial</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Complete Responsive Hospital Website Design Tutorial</title>
 
-    <!--font aweaome cdn link-->
+    <!-- font awesome CDN link -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css">
 
-
-
-
-
-    <!--costom css file link-->
+    <!-- custom CSS file link -->
     <link rel="stylesheet" href="style3.css">
-
 </head>
 
 <body>
 
-    <!-- header navder section start-->
-
+    <!-- header navbar section start -->
     <header>
+        <a href="#" class="logo"><span>Doctors</span><span>c</span>ares.</a>
 
-        <!--logo name-->
-        <a href="#" class="logo"><span>Doctors<span>c</span>ares.</a>
-        <!--navbar link-->
         <nav class="navbar">
             <ul>
                 <li><a href="#home">home</a></li>
@@ -39,120 +31,78 @@
         </nav>
         <div class="fas fa-bars"></div>
     </header>
-    <!--header navbar section end-->
+    <!-- header navbar section end -->
 
-    <!-- home section start  -->
-
+    <!-- home section start -->
     <section id="home" class="home">
-
-
         <div class="row">
-
-            <!--home image-->
             <div class="images">
                 <img src="hh.png" alt="">
             </div>
-            <!--home heading-->
             <div class="contact">
-                <h1><span>Stay</span>Safe, <span>Stay</span>Healthy.</h1>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ad reprehenderit porro eligendi, deleniti, architecto maxime dolore labore error modi ullam, accusamus veniam aut dignissimos facere. Nobis est ad atque voluptates.</p>
-                <a href="#"><button class="button">read more</button></a>
+                <h1><span>Stay</span> Safe, <span>Stay</span> Healthy.</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit...</p>
+                <a href="#"><button class="button">Read more</button></a>
             </div>
         </div>
-
     </section>
+    <!-- home section end -->
 
-    <!-- home section end  -->
-
-
-    <!--about section start-->
+    <!-- about section start -->
     <section id="about" class="about">
-
-        <h1 class="heading">about your facility</h1>
+        <h1 class="heading">About Your Facility</h1>
         <h3 class="title">Learn and explore our facility</h3>
 
         <div class="box-container">
-            <!--start here-->
             <div class="box">
-
-                <!--about image-->
                 <div class="image">
                     <img src="ambulance.png" alt="">
                 </div>
-                <!--about heading & text-->
                 <div class="content">
-                    <h3>ambulance Services</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi labore dolor dicta quod tenetur quo incidunt asperiores nostrum? Dolores aspernatur aut, nobis error neque iste autem animi quos! Sed, officiis!</p>
+                    <h3>Ambulance Services</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit...</p>
                     <a href="#"><button class="button">Learn more</button></a>
-
                 </div>
-
             </div>
-            <div class="box-container">
-                <!--start here-->
-                <div class="box">
 
-                    <!--about image-->
-                    <div class="image">
-                        <img src="check-up.jpeg" alt="">
-                    </div>
-                    <!--about heading & text-->
-                    <div class="content">
-                        <h3>free check-ups</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi labore dolor dicta quod tenetur quo incidunt asperiores nostrum? Dolores aspernatur aut, nobis error neque iste autem animi quos! Sed, officiis!</p>
-                        <a href="#"><button class="button">Learn more</button></a>
-
-                    </div>
-
+            <div class="box">
+                <div class="image">
+                    <img src="check-up.jpeg" alt="">
                 </div>
-                <!-- end here-->
-                <div class="box-container"></div>
-                <!--start here-->
-                <div class="box">
-
-                    <!--about image-->
-                    <div class="image">
-                        <img src="emergency room1.jpeg" alt="">
-                    </div>
-                    <!--about heading & text-->
-                    <div class="content">
-                        <h3>emergency rooms</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Excepturi labore dolor dicta quod tenetur quo incidunt asperiores nostrum? Dolores aspernatur aut, nobis error neque iste autem animi quos! Sed, officiis!</p>
-                        <a href="#"><button class="button">Learn more</button></a>
-
-                    </div>
-
+                <div class="content">
+                    <h3>Free Check-ups</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit...</p>
+                    <a href="#"><button class="button">Learn more</button></a>
                 </div>
-
-
-                <!-- end here-->
-
             </div>
+
+            <div class="box">
+                <div class="image">
+                    <img src="emergency room1.jpeg" alt="">
+                </div>
+                <div class="content">
+                    <h3>Emergency Rooms</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit...</p>
+                    <a href="#"><button class="button">Learn more</button></a>
+                </div>
+            </div>
+        </div>
     </section>
+    <!-- about section end -->
 
-
-
-    <!--about section end-->
-
-    <!--card section start-->
+    <!-- doctor section start -->
     <section id="doctor" class="card">
         <div class="container">
-            <h1 class="heading">doctor</h1>
-            <h3 class="title">our professional doctors</h3>
+            <h1 class="heading">Doctor</h1>
+            <h3 class="title">Our professional doctors</h3>
 
             <div class="box-container">
-
-
-                <!--start here-->
                 <div class="box">
                     <img src="doctor2.jpeg" alt="">
-
                     <div class="contact">
                         <a href="#">
-                            <h2>join doe</h2>
-                            <p>professional</p>
-
-                            <!--card icons-->
+                            <h2>John Doe</h2>
+                            <p>Professional</p>
                             <div class="icons">
                                 <a href="#" class="fab fa-facebook-f"></a>
                                 <a href="#" class="fab fa-twitter"></a>
@@ -161,18 +111,13 @@
                         </a>
                     </div>
                 </div>
-                <!--end hare-->
-                <div class="box-container"></div>
-                <!--start here-->
+
                 <div class="box">
                     <img src="doctor.jpeg" alt="">
-
                     <div class="contact">
                         <a href="#">
-                            <h2>join doe</h2>
-                            <p>professional</p>
-
-                            <!--card icons-->
+                            <h2>Jane Doe</h2>
+                            <p>Professional</p>
                             <div class="icons">
                                 <a href="#" class="fab fa-facebook-f"></a>
                                 <a href="#" class="fab fa-twitter"></a>
@@ -181,18 +126,13 @@
                         </a>
                     </div>
                 </div>
-                <!--end hare-->
-                <div class="box-container"></div>
-                <!--start here-->
+
                 <div class="box">
                     <img src="doctor1.jpeg" alt="">
-
                     <div class="contact">
                         <a href="#">
-                            <h2>join doe</h2>
-                            <p>professional</p>
-
-                            <!--card icons-->
+                            <h2>Dr. Smith</h2>
+                            <p>Professional</p>
                             <div class="icons">
                                 <a href="#" class="fab fa-facebook-f"></a>
                                 <a href="#" class="fab fa-twitter"></a>
@@ -201,229 +141,104 @@
                         </a>
                     </div>
                 </div>
-                <!--end hare-->
             </div>
-
         </div>
     </section>
-    <!--card section end-->
+    <!-- doctor section end -->
 
-
-
-
-    <!--review section start-->
+    <!-- review section start -->
     <section id="review" class="review">
-
-        <h1 class="heading">our patient review</h1>
-        <h3 class="title">what patient says about us</h3>
+        <h1 class="heading">Our Patient Review</h1>
+        <h3 class="title">What patient says about us</h3>
 
         <div class="box-container">
-
-            <!--start here-->
             <div class="box">
                 <i class="fas fa-quote-left"></i>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia corporis provident est doloremque quasi obcaecati ipsa explicabo vel accusantium, in nisi laboriosam maxime suscipit eius dolore fuga excepturi voluptatem nesciunt?</p>
-
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit...</p>
                 <div class="images">
                     <img src="woman.jpg" alt="">
-
                     <div class="info">
-                        <h3>john doe</h3>
-                        <span>date : 11 2024</span>
+                        <h3>John Doe</h3>
+                        <span>Date: 11 2024</span>
                     </div>
                 </div>
             </div>
-            <!--end here-->
 
-            <!--start here-->
             <div class="box">
                 <i class="fas fa-quote-left"></i>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia corporis provident est doloremque quasi obcaecati ipsa explicabo vel accusantium, in nisi laboriosam maxime suscipit eius dolore fuga excepturi voluptatem nesciunt?</p>
-
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit...</p>
                 <div class="images">
                     <img src="man2.jpeg" alt="">
-
                     <div class="info">
-                        <h3>john doe</h3>
-                        <span>date : 11 2024</span>
+                        <h3>John Doe</h3>
+                        <span>Date: 11 2024</span>
                     </div>
                 </div>
             </div>
-            <!--end here-->
 
-            <!--start here-->
             <div class="box">
                 <i class="fas fa-quote-left"></i>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia corporis provident est doloremque quasi obcaecati ipsa explicabo vel accusantium, in nisi laboriosam maxime suscipit eius dolore fuga excepturi voluptatem nesciunt?</p>
-
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit...</p>
                 <div class="images">
                     <img src="man.jpeg" alt="">
-
                     <div class="info">
-                        <h3>john doe</h3>
-                        <span>date : 11 2024</span>
+                        <h3>John Doe</h3>
+                        <span>Date: 11 2024</span>
                     </div>
                 </div>
             </div>
-            <!--end here-->
         </div>
     </section>
+    <!-- review section end -->
 
-
-    <!--review section end-->
-    <!--contact section start-->
-
+    <!-- contact section start -->
     <section id="contact" class="contact">
-
-        <h1 class="heading">contact us</h1>
-        <h3 class="title">you can task to us any times,</h3>
+        <h1 class="heading">Contact Us</h1>
+        <h3 class="title">You can talk to us any time</h3>
 
         <div class="row">
-            <!--form images-->
             <div class="images">
                 <img src="task.jpeg" alt="">
             </div>
 
             <div class="form-container">
-                <input type="text" placeholder="full name" name="" id="">
-                <input type="email" placeholder="enter your email" name="" id="">
-                <input type="number" placeholder="phone" name="" id="">
-                <textarea name="" cols="30" rows="10" id=""></textarea>
-                <input type="submit" value="send">
-
+                <input type="text" placeholder="Full name">
+                <input type="email" placeholder="Enter your email">
+                <input type="number" placeholder="Phone">
+                <textarea cols="30" rows="10" placeholder="Your message"></textarea>
+                <input type="submit" value="Send">
             </div>
         </div>
-
-
-
-
     </section>
+    <!-- contact section end -->
 
-
-
-
-
-
-    <!--contact section end-->
-    <!--blog section start-->
+    <!-- blog section start -->
     <section id="blog" class="blog">
-        <h1 class="heading">blog</h1>
-        <h3 class="title">Lorem ipsum dolor sit amet consectetur adipisicing.</h3>
+        <h1 class="heading">Blog</h1>
+        <h3 class="title">Read our latest updates</h3>
 
         <div class="box-container">
-            <!--start here-->
             <div class="box">
-                <!--images-->
                 <img src="blog.jpeg" alt="">
-
                 <div class="content">
-                    <a href="#">
-                        <h2>diabetes</h2>
-                    </a>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo, quis sunt nostrum beatae maiores at repellendus optio rem quo blanditiis.</p>
-                    <a href="#"> <button class="button">learn more</button></a>
+                    <a href="#"><h2>Diabetes</h2></a>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit...</p>
+                    <a href="#"><button class="button">Learn more</button></a>
                 </div>
             </div>
 
-
-            <!--end here-->
-            <!--start here-->
             <div class="box">
-                <!--images-->
                 <img src="covid.jpeg" alt="">
-
                 <div class="content">
-                    <a href="#">
-                        <h2>covid-19 vaccine</h2>
-                    </a>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo, quis sunt nostrum beatae maiores at repellendus optio rem quo blanditiis.</p>
-                    <a href="#"> <button class="button">learn more</button></a>
+                    <a href="#"><h2>Covid-19 Vaccine</h2></a>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit...</p>
+                    <a href="#"><button class="button">Learn more</button></a>
                 </div>
             </div>
 
-
-            <!--end here-->
-            <!--start here-->
             <div class="box">
-                <!--images-->
                 <img src="virus.jpeg" alt="">
-
                 <div class="content">
-                    <a href="#">
-                        <h2>prevent epidemic</h2>
-                    </a>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nemo, quis sunt nostrum beatae maiores at repellendus optio rem quo blanditiis.</p>
-                    <a href="#"> <button class="button">learn more</button></a>
-                </div>
-            </div>
+                    <a href="#"><h2>Prevent Epidemic</h2></a>
+                   
 
-
-            <!--end here-->
-
-
-
-
-
-        </div>
-    </section>
-
-
-
-
-
-    <!--blog section end-->
-
-    <!--footer section start-->
-    <section class="footer">
-
-        <div class="box">
-            <h2 class="log"><span>D</span>octors<span>C</span>ars</h2>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Architecto, exercitationem qui rerum debitis expedita libero cumque autem, numquam eum quam nisi. Repudiandae animi tenetur reprehenderit!</p>
-
-        </div>
-        <div class="box">
-            <h2 class="log"><span>S</span>hare</h2>
-
-            <a href="#">facebook</a>
-            <a href="#">twitter</a>
-            <a href="#">instagram</a>
-            <a href="#">pinterest</a>
-        </div>
-        <div class="box">
-            <h2 class="log"><span>L</span>inks</h2>
-
-
-            <a href="#">home</a>
-            <a href="#">about</a>
-            <a href="#">doctor</a>
-            <a href="#">review</a>
-            <a href="#">contact</a>
-            <a href="#">blog</a>
-
-        </div>
-
-        <h1 class="credit">created by<span>Kunti Pal</span>all right reserved.</h1>
-
-    </section>
-
-
-
-
-
-
-
-
-
-    <!--footer section end-->
-
-
-
-    <!--jquery cdn link-->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-compat/3.0.0-alpha1/jquery.min.js"></script>
-
-    <!--custom js file link-->
-    <script src="./js/main.js">
-    </script>
-</body>
-
-</html>
