--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
             <!-- home images  -->
             <div class="images">
-                <img src="home.png" alt="">
+                <img src="home.jpeg" alt="">
             </div>
 
             <!-- home heading  -->
